--- a/GoogLogin/app/build.gradle
+++ b/GoogLogin/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     signingConfigs {
@@ -11,15 +10,13 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.0"
     defaultConfig {
-        applicationId "com.apps.finalproj.mobsec"
-        minSdkVersion 18
+        applicationId "com.apps.finalproj.googlogin"
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -30,24 +27,12 @@ android {
             signingConfig signingConfigs.config
         }
     }
-    packagingOptions {
-        exclude 'LICENSE.txt'
-    }
-    // Resolve dependency differences between app and tests
-    configurations.all {
-        resolutionStrategy.force 'com.android.support:support-annotations:22.2.0'
-    }
 }
+apply plugin: 'com.google.gms.google-services'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services-identity:8.1.0'
     compile 'com.google.android.gms:play-services-plus:8.1.0'
-    // UiAutomatorTesting
-    androidTestCompile 'com.android.support.test:runner:0.2'
-    androidTestCompile 'com.android.support.test:rules:0.2'
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.0'
-    androidTestCompile 'com.android.support:support-annotations:23.0.1'
 }
