--- a/GoogLogin/app/src/main/AndroidManifest.xml
+++ b/GoogLogin/app/src/main/AndroidManifest.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.apps.finalproj.mobsec"
-    android:versionCode="1"
-    android:versionName="1.0" >
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    package="com.apps.finalproj.googlogin" >
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
 
     <application
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.apps.finalproj.mobsec.GoogleLoginActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUPActivity"/>
-
     </application>
 
 </manifest>
