--- a/MobSec/app/build.gradle
+++ b/MobSec/app/build.gradle
@@ -45,9 +45,13 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.google.android.gms:play-services-identity:8.1.0'
     compile 'com.google.android.gms:play-services-plus:8.1.0'
+    compile 'com.google.guava:guava:18.0'
     // UiAutomatorTesting
     androidTestCompile 'com.android.support.test:runner:0.2'
     androidTestCompile 'com.android.support.test:rules:0.2'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.0'
     androidTestCompile 'com.android.support:support-annotations:23.0.1'
+    compile 'com.google.guava:guava:18.0'
+    compile 'javax.mail:mail:1.4.7'
+    compile 'javax.activation:activation:1.1.1'
 }
